--- a/content/dataset/PAGE/homeShowcase.yaml
+++ b/content/dataset/PAGE/homeShowcase.yaml
@@ -475,6 +475,7 @@ query_showcase_main:     &query_showcase_main
                                 -------------- ***** CONDITION
                                 A.Activo = 'SI' AND
                                 A.Habilitado_Tematika = 'S' AND
+                                A.Precio_Venta_Vigente >= 7.0 AND
                                 A.Archivo_Imagen IS NOT NULL AND
                                 A.Archivo_Imagen <> 'N'
                     -------------- Disponibilidades
@@ -551,6 +552,7 @@ augment_query_showcase_rating:  &augment_query_showcase_rating
                                                         -------------- ***** CONDITION
                                                         A.Activo = 'SI' AND
                                                         A.Habilitado_Tematika = 'S' AND
+                                                        A.Precio_Venta_Vigente >= 7.0 AND
                                                         A.Archivo_Imagen IS NOT NULL AND
                                                         A.Archivo_Imagen <> 'N'
                                             -------------- Disponibilidades
@@ -621,6 +623,7 @@ augment_query_showcase_authors:  &augment_query_showcase_authors
                                                         -------------- ***** CONDITION
                                                         A.Activo = 'SI' AND
                                                         A.Habilitado_Tematika = 'S' AND
+                                                        A.Precio_Venta_Vigente >= 7.0 AND
                                                         A.Archivo_Imagen IS NOT NULL AND
                                                         A.Archivo_Imagen <> 'N'
                                             -------------- Disponibilidades
