--- a/content/dataset/SUBJ/subjectCommentsSubfamilia.yaml
+++ b/content/dataset/SUBJ/subjectCommentsSubfamilia.yaml
@@ -54,9 +54,9 @@ query_unified:  &query_unified
                     FROM        Comentario_Articulos C
                     INNER JOIN  Articulos A
                         ON      C.Id_Articulo = A.Id_Articulo AND
-                                A.Archivo_Imagen != 'N' AND
                                 A.Activo = 'SI' AND
-                                A.Habilitado_Tematika = 'S'
+                                A.Habilitado_Tematika = 'S' AND
+                                A.Precio_Venta_Vigente >= 7.0
                     INNER JOIN  Disponibilidades D
                         ON      A.Id_Disponibilidad = D.Id_Disponibilidad AND
                                 --------------- condition
