--- a/content/dataset/SUBJ/subjectMainFamilia.yaml
+++ b/content/dataset/SUBJ/subjectMainFamilia.yaml
@@ -168,8 +168,7 @@ query_products_main:     &query_products_main
                                 -------------- ***** CONDITION
                                 A.Activo = 'SI' AND
                                 A.Habilitado_Tematika = 'S' AND
-                                A.Archivo_Imagen IS NOT NULL AND
-                                A.Archivo_Imagen <> 'N'
+                                A.Precio_Venta_Vigente >= 7.0
                     -------------- Ranking
                     LEFT JOIN   Mas_Vendidos_Familia MVS
                         ON      A.Categoria_Seccion = MVS.Categoria_Seccion AND
@@ -257,8 +256,7 @@ augment_query_products_rating:  &augment_query_products_rating
                                                         -------------- ***** CONDITION
                                                         A.Activo = 'SI' AND
                                                         A.Habilitado_Tematika = 'S' AND
-                                                        A.Archivo_Imagen IS NOT NULL AND
-                                                        A.Archivo_Imagen <> 'N'
+                                                        A.Precio_Venta_Vigente >= 7.0
                                             -------------- Disponibilidades
                                             INNER JOIN  Disponibilidades D
                                                 ON      A.Id_Disponibilidad = D.Id_Disponibilidad AND
@@ -321,8 +319,7 @@ augment_query_products_authors:  &augment_query_products_authors
                                                         -------------- ***** CONDITION
                                                         A.Activo = 'SI' AND
                                                         A.Habilitado_Tematika = 'S' AND
-                                                        A.Archivo_Imagen IS NOT NULL AND
-                                                        A.Archivo_Imagen <> 'N'
+                                                        A.Precio_Venta_Vigente >= 7.0
                                             -------------- Disponibilidades
                                             INNER JOIN  Disponibilidades D
                                                 ON      A.Id_Disponibilidad = D.Id_Disponibilidad AND
@@ -520,6 +517,7 @@ query_showcase_main:     &query_showcase_main
                                 -------------- ***** CONDITION
                                 A.Activo = 'SI' AND
                                 A.Habilitado_Tematika = 'S' AND
+                                A.Precio_Venta_Vigente >= 7.0 AND
                                 A.Archivo_Imagen IS NOT NULL AND
                                 A.Archivo_Imagen <> 'N' AND
                                 A.Fecha_Alta {{VAR:operator}}
@@ -605,6 +603,7 @@ augment_query_showcase_rating:  &augment_query_showcase_rating
                                                         -------------- ***** CONDITION
                                                         A.Activo = 'SI' AND
                                                         A.Habilitado_Tematika = 'S' AND
+                                                        A.Precio_Venta_Vigente >= 7.0 AND
                                                         A.Archivo_Imagen IS NOT NULL AND
                                                         A.Archivo_Imagen <> 'N' AND
                                                         A.Fecha_Alta {{VAR:operator}}
@@ -672,6 +671,7 @@ augment_query_showcase_authors:  &augment_query_showcase_authors
                                                         -------------- ***** CONDITION
                                                         A.Activo = 'SI' AND
                                                         A.Habilitado_Tematika = 'S' AND
+                                                        A.Precio_Venta_Vigente >= 7.0 AND
                                                         A.Archivo_Imagen IS NOT NULL AND
                                                         A.Archivo_Imagen <> 'N' AND
                                                         A.Fecha_Alta {{VAR:operator}}
