--- a/content/dataset/SUBJ/subjectMainSubfamilia.yaml
+++ b/content/dataset/SUBJ/subjectMainSubfamilia.yaml
@@ -169,8 +169,7 @@ query_products_main:     &query_products_main
                                 -------------- ***** CONDITION
                                 A.Activo = 'SI' AND
                                 A.Habilitado_Tematika = 'S' AND
-                                A.Archivo_Imagen IS NOT NULL AND
-                                A.Archivo_Imagen <> 'N'
+                                A.Precio_Venta_Vigente >= 7.0
                     -------------- Ranking
                     LEFT JOIN   Mas_Vendidos_Subfamilia MVS
                         ON      A.Categoria_Seccion     = MVS.Categoria_Seccion    AND
@@ -260,8 +259,7 @@ augment_query_products_rating:  &augment_query_products_rating
                                                         -------------- ***** CONDITION
                                                         A.Activo = 'SI' AND
                                                         A.Habilitado_Tematika = 'S' AND
-                                                        A.Archivo_Imagen IS NOT NULL AND
-                                                        A.Archivo_Imagen <> 'N'
+                                                        A.Precio_Venta_Vigente >= 7.0
                                             -------------- Disponibilidades
                                             INNER JOIN  Disponibilidades D
                                                 ON      A.Id_Disponibilidad = D.Id_Disponibilidad AND
@@ -325,8 +323,7 @@ augment_query_products_authors:  &augment_query_products_authors
                                                         -------------- ***** CONDITION
                                                         A.Activo = 'SI' AND
                                                         A.Habilitado_Tematika = 'S' AND
-                                                        A.Archivo_Imagen IS NOT NULL AND
-                                                        A.Archivo_Imagen <> 'N'
+                                                        A.Precio_Venta_Vigente >= 7.0
                                             -------------- Disponibilidades
                                             INNER JOIN  Disponibilidades D
                                                 ON      A.Id_Disponibilidad = D.Id_Disponibilidad AND
@@ -525,6 +522,7 @@ query_showcase_main:     &query_showcase_main
                                 -------------- ***** CONDITION
                                 A.Activo = 'SI' AND
                                 A.Habilitado_Tematika = 'S' AND
+                                A.Precio_Venta_Vigente >= 7.0 AND
                                 A.Archivo_Imagen IS NOT NULL AND
                                 A.Archivo_Imagen <> 'N' AND
                                 A.Fecha_Alta {{VAR:operator}}
@@ -611,6 +609,7 @@ augment_query_showcase_rating:  &augment_query_showcase_rating
                                                         -------------- ***** CONDITION
                                                         A.Activo = 'SI' AND
                                                         A.Habilitado_Tematika = 'S' AND
+                                                        A.Precio_Venta_Vigente >= 7.0 AND
                                                         A.Archivo_Imagen IS NOT NULL AND
                                                         A.Archivo_Imagen <> 'N' AND
                                                         A.Fecha_Alta {{VAR:operator}}
@@ -679,6 +678,7 @@ augment_query_showcase_authors:  &augment_query_showcase_authors
                                                         -------------- ***** CONDITION
                                                         A.Activo = 'SI' AND
                                                         A.Habilitado_Tematika = 'S' AND
+                                                        A.Precio_Venta_Vigente >= 7.0 AND
                                                         A.Archivo_Imagen IS NOT NULL AND
                                                         A.Archivo_Imagen <> 'N' AND
                                                         A.Fecha_Alta {{VAR:operator}}
