Added PROD tax calculations to datasets and generated new sample data

--- a/content/dataset/PAGE/homeShowcase.yaml
+++ b/content/dataset/PAGE/homeShowcase.yaml
@@ -158,7 +158,8 @@ query_recommended_main:     &query_recommended_main
                 A.Categoria_Grupo               AS Categoria_Grupo,
                 A.Categoria_Familia             AS Categoria_Familia,
                 A.Categoria_Subfamilia          AS Categoria_Subfamilia,
-                A.Archivo_Imagen                AS Archivo_Imagen
+                A.Archivo_Imagen                AS Archivo_Imagen,
+                A.Id_Impuesto                   AS Id_Impuesto
             FROM        Articulos_Mesa_Recomendados AMR
             INNER JOIN  Articulos A
                 ON      AMR.Id_Articulo = A.Id_Articulo AND
@@ -214,9 +215,10 @@ query_recommended_main:     &query_recommended_main
                           "FulfillmentValue", "CurrencyCode", "CurrencyCode_list", 
                           "CurrencyCode_desc", "PriceAmount",
                           "Categoria_Seccion", "Categoria_Grupo", "Categoria_Familia",
-                          "Categoria_Subfamilia", "Archivo_Imagen" ]
+                          "Categoria_Subfamilia", "Archivo_Imagen", "Id_Impuesto" ]
     query.post:         [ "tmklib.fixes.PROD.title",
                           "tmklib.fixes.PROD.calcImages",
+                          "tmklib.PROD.calculateTaxes",
                           "tmklib.url.PROD",
                           "tmklib.fixes.PROD.embedRatings",
                           "tmklib.fixes.IMPR.title",
@@ -468,7 +470,8 @@ query_showcase_main:     &query_showcase_main
                         A.Categoria_Grupo               AS Categoria_Grupo,
                         A.Categoria_Familia             AS Categoria_Familia,
                         A.Categoria_Subfamilia          AS Categoria_Subfamilia,
-                        A.Archivo_Imagen                AS Archivo_Imagen
+                        A.Archivo_Imagen                AS Archivo_Imagen,
+                        A.Id_Impuesto                   AS Id_Impuesto
                     FROM        Mas_Vendidos_Seccion MVS
                     INNER JOIN  Articulos A
                         ON      MVS.Id_Articulo = A.Id_Articulo AND
@@ -521,10 +524,11 @@ query_showcase_main:     &query_showcase_main
                           "FulfillmentValue", "CurrencyCode", "CurrencyCode_list", 
                           "CurrencyCode_desc", "PriceAmount",
                           "Categoria_Seccion", "Categoria_Grupo", "Categoria_Familia",
-                          "Categoria_Subfamilia", "Archivo_Imagen" ]
+                          "Categoria_Subfamilia", "Archivo_Imagen", "Id_Impuesto" ]
     query.post:         [ "tmklib.fixes.PROD.title",
                           "tmklib.fixes.PROD.calcImages",
                           "tmklib.fixes.PROD.filterWithoutImage",
+                          "tmklib.PROD.calculateTaxes",
                           "tmklib.url.PROD",
                           "tmklib.fixes.PROD.embedRatings",
                           "tmklib.fixes.IMPR.title",
