--- a/content/dataset/PROD/productPrice.yaml
+++ b/content/dataset/PROD/productPrice.yaml
@@ -86,7 +86,8 @@ query.sql:          >
                     A.Categoria_Seccion             AS Categoria_Seccion,
                     A.Categoria_Grupo               AS Categoria_Grupo,
                     A.Categoria_Familia             AS Categoria_Familia,
-                    A.Categoria_Subfamilia          AS Categoria_Subfamilia
+                    A.Categoria_Subfamilia          AS Categoria_Subfamilia,
+                    A.Id_Impuesto                   AS Id_Impuesto
         FROM        Articulos A
         -------------- Disponibilidades
         INNER JOIN  Disponibilidades D
@@ -110,4 +111,6 @@ query.columns:      [ "EntityType", "EntityId", "ProductId", "ProductForm",
                       "FulfillmentType_list", "FulfillmentType_desc", "FulfillmentValue",
                       "CurrencyCode", "CurrencyCode_list", "CurrencyCode_desc",
                       "PriceAmount", "eXtraPoints", "Categoria_Seccion", "Categoria_Grupo",
-                      "Categoria_Familia", "Categoria_Subfamilia" ]
+                      "Categoria_Familia", "Categoria_Subfamilia", "Id_Impuesto" ]
+query.post:         [ "tmklib.PROD.calculateTaxes"
+                    ]
