--- a/content/dataset/PROD/productRelated.yaml
+++ b/content/dataset/PROD/productRelated.yaml
@@ -298,7 +298,8 @@ query_unified:  &query_unified
                             A.Categoria_Grupo               AS Categoria_Grupo,
                             A.Categoria_Familia             AS Categoria_Familia,
                             A.Categoria_Subfamilia          AS Categoria_Subfamilia,
-                            A.Archivo_Imagen                AS Archivo_Imagen
+                            A.Archivo_Imagen                AS Archivo_Imagen,
+                            A.Id_Impuesto                   AS Id_Impuesto
             FROM        (
                 SELECT                      Id_Articulo, Id_Articulo_Relacionado, Row_Number
                     FROM (
@@ -376,9 +377,10 @@ query_unified:  &query_unified
                           "CurrencyCode", "CurrencyCode_list", "CurrencyCode_desc",
                           "PriceAmount", "Categoria_Seccion", "Categoria_Grupo",
                           "Categoria_Familia", "Categoria_Subfamilia",
-                          "Archivo_Imagen" ]
+                          "Archivo_Imagen", "Id_Impuesto" ]
     query.post:         [ "tmklib.fixes.PROD.title",
                           "tmklib.fixes.PROD.calcImagesRelated",
+                          "tmklib.PROD.calculateTaxes",
                           "tmklib.url.PRODRelated",
                           "tmklib.fixes.PROD.embedRatings",
                           "tmklib.PROD.categories",
