--- a/content/dataset/PAGE/homeMain.yaml
+++ b/content/dataset/PAGE/homeMain.yaml
@@ -151,7 +151,8 @@ query_main:     &query_main
                 A.Categoria_Grupo               AS Categoria_Grupo,
                 A.Categoria_Familia             AS Categoria_Familia,
                 A.Categoria_Subfamilia          AS Categoria_Subfamilia,
-                A.Archivo_Imagen                AS Archivo_Imagen
+                A.Archivo_Imagen                AS Archivo_Imagen,
+                A.Id_Impuesto                   AS Id_Impuesto
             FROM        Articulos_Mesa_Recomendados AMR
             INNER JOIN  Articulos A
                 ON      AMR.Id_Articulo = A.Id_Articulo AND
@@ -205,9 +206,10 @@ query_main:     &query_main
                           "FulfillmentValue", "CurrencyCode", "CurrencyCode_list", 
                           "CurrencyCode_desc", "PriceAmount",
                           "Categoria_Seccion", "Categoria_Grupo", "Categoria_Familia",
-                          "Categoria_Subfamilia", "Archivo_Imagen" ]
+                          "Categoria_Subfamilia", "Archivo_Imagen", "Id_Impuesto" ]
     query.post:         [ "tmklib.fixes.PROD.title",
                           "tmklib.fixes.PROD.calcImages",
+                          "tmklib.PROD.calculateTaxes",
                           "tmklib.url.PROD",
                           "tmklib.fixes.PROD.embedRatings",
                           "tmklib.fixes.IMPR.title",
