--- a/content/dataset/PROD/productMain.yaml
+++ b/content/dataset/PROD/productMain.yaml
@@ -360,7 +360,8 @@ query.sql:          >
             A.Categoria_Familia             AS Categoria_Familia,
             A.Categoria_Subfamilia          AS Categoria_Subfamilia,
             A.Archivo_Imagen                AS Archivo_Imagen,
-            A.Id_Impuesto                   AS Id_Impuesto
+            A.Id_Impuesto                   AS Id_Impuesto,
+            D.Descripcion                   AS Fulfillment_desc
         FROM        Articulos A
         -------------- Ranking
         LEFT JOIN   Mas_Vendidos_Seccion MVS
@@ -407,7 +408,7 @@ query.columns:      [ "EntityType", "EntityId", "ProductId", "LinkBase",
                       "CurrencyCode", "CurrencyCode_list", "CurrencyCode_desc",
                       "PriceAmount", "Categoria_Seccion", "Categoria_Grupo",
                       "Categoria_Familia", "Categoria_Subfamilia",
-                      "Archivo_Imagen", "Id_Impuesto" ]
+                      "Archivo_Imagen", "Id_Impuesto", "Fulfillment_desc" ]
 query.post:         [ "tmklib.fixes.PROD.title",
                       "tmklib.fixes.PROD.calcImages",
                       "tmklib.PROD.calculateTaxes",
