--- a/content/dataset/PAGE/homeShowcase.yaml
+++ b/content/dataset/PAGE/homeShowcase.yaml
@@ -159,7 +159,8 @@ query_recommended_main:     &query_recommended_main
                 A.Categoria_Familia             AS Categoria_Familia,
                 A.Categoria_Subfamilia          AS Categoria_Subfamilia,
                 A.Archivo_Imagen                AS Archivo_Imagen,
-                A.Id_Impuesto                   AS Id_Impuesto
+                A.Id_Impuesto                   AS Id_Impuesto,
+                D.Descripcion                   AS Fulfillment_desc
             FROM        Articulos_Mesa_Recomendados AMR
             INNER JOIN  Articulos A
                 ON      AMR.Id_Articulo = A.Id_Articulo AND
@@ -215,7 +216,8 @@ query_recommended_main:     &query_recommended_main
                           "FulfillmentValue", "CurrencyCode", "CurrencyCode_list", 
                           "CurrencyCode_desc", "PriceAmount",
                           "Categoria_Seccion", "Categoria_Grupo", "Categoria_Familia",
-                          "Categoria_Subfamilia", "Archivo_Imagen", "Id_Impuesto" ]
+                          "Categoria_Subfamilia", "Archivo_Imagen", "Id_Impuesto",
+                          "Fulfillment_desc" ]
     query.post:         [ "tmklib.fixes.PROD.title",
                           "tmklib.fixes.PROD.calcImages",
                           "tmklib.PROD.calculateTaxes",
@@ -471,7 +473,8 @@ query_showcase_main:     &query_showcase_main
                         A.Categoria_Familia             AS Categoria_Familia,
                         A.Categoria_Subfamilia          AS Categoria_Subfamilia,
                         A.Archivo_Imagen                AS Archivo_Imagen,
-                        A.Id_Impuesto                   AS Id_Impuesto
+                        A.Id_Impuesto                   AS Id_Impuesto,
+                        D.Descripcion                   AS Fulfillment_desc
                     FROM        Mas_Vendidos_Seccion MVS
                     INNER JOIN  Articulos A
                         ON      MVS.Id_Articulo = A.Id_Articulo AND
@@ -524,7 +527,8 @@ query_showcase_main:     &query_showcase_main
                           "FulfillmentValue", "CurrencyCode", "CurrencyCode_list", 
                           "CurrencyCode_desc", "PriceAmount",
                           "Categoria_Seccion", "Categoria_Grupo", "Categoria_Familia",
-                          "Categoria_Subfamilia", "Archivo_Imagen", "Id_Impuesto" ]
+                          "Categoria_Subfamilia", "Archivo_Imagen", "Id_Impuesto",
+                          "Fulfillment_desc" ]
     query.post:         [ "tmklib.fixes.PROD.title",
                           "tmklib.fixes.PROD.calcImages",
                           "tmklib.fixes.PROD.filterWithoutImage",
