--- a/content/dataset/SUBJ/subjectMainFamilia.yaml
+++ b/content/dataset/SUBJ/subjectMainFamilia.yaml
@@ -157,6 +157,7 @@ query_products_main:     &query_products_main
                         A.Categoria_Subfamilia          AS Categoria_Subfamilia,
                         A.Archivo_Imagen                AS Archivo_Imagen,
                         A.Id_Impuesto                   AS Id_Impuesto,
+                        D.Descripcion                   AS Fulfillment_desc,
                         -------------- USED TO LIMIT THE COUNT OF RETRIEVED ITEMS
                         row_number() OVER (PARTITION BY S.SubjectId
                                            ORDER BY A.Fecha_Alta DESC, A.Id_Articulo DESC)
@@ -220,7 +221,7 @@ query_products_main:     &query_products_main
                           "CurrencyCode_desc", "PriceAmount",
                           "Categoria_Seccion", "Categoria_Grupo", "Categoria_Familia",
                           "Categoria_Subfamilia", "Archivo_Imagen", "Id_Impuesto",
-                          "Row_Number" ]
+                          "Fulfillment_desc", "Row_Number" ]
     query.post:         [ "tmklib.fixes.PROD.title",
                           "tmklib.fixes.PROD.calcImages",
                           "tmklib.PROD.calculateTaxes",
@@ -508,6 +509,7 @@ query_showcase_main:     &query_showcase_main
                         A.Categoria_Subfamilia          AS Categoria_Subfamilia,
                         A.Archivo_Imagen                AS Archivo_Imagen,
                         A.Id_Impuesto                   AS Id_Impuesto,
+                        D.Descripcion                   AS Fulfillment_desc,
                         -------------- USED TO LIMIT THE COUNT OF RETRIEVED ITEMS
                         row_number() OVER (PARTITION BY S.SubjectId ORDER BY MVS.Orden)
                                                         AS Row_Number
@@ -570,7 +572,7 @@ query_showcase_main:     &query_showcase_main
                           "CurrencyCode_desc", "PriceAmount",
                           "Categoria_Seccion", "Categoria_Grupo", "Categoria_Familia",
                           "Categoria_Subfamilia", "Archivo_Imagen", "Id_Impuesto",
-                          "Row_Number" ]
+                          "Fulfillment_desc", "Row_Number" ]
     query.post:         [ "tmklib.fixes.PROD.title",
                           "tmklib.fixes.PROD.calcImages",
                           "tmklib.fixes.PROD.filterWithoutImage",
