Fixed the language error (no description for language) and regenerated sample data.

--- a/content/dataset/PAGE/homeMain.yaml
+++ b/content/dataset/PAGE/homeMain.yaml
@@ -172,7 +172,7 @@ query_main:     &query_main
                         A.AuxVarchar03 = CGRC_PF.RV_Low_Value
             -------------- Language Code
             LEFT JOIN   CG_Ref_Codes CGRC_LC
-                ON      CGRC_LC.RV_Domain = 'CGRC_LC' AND
+                ON      CGRC_LC.RV_Domain = 'IDIOMA' AND
                         COALESCE(A.Idioma, 'ES') = CGRC_LC.RV_Low_Value
             -------------- Ranking
             LEFT JOIN   Mas_Vendidos_Seccion MVS
