--- a/content/dataset/PAGE/homeShowcase.yaml
+++ b/content/dataset/PAGE/homeShowcase.yaml
@@ -181,7 +181,7 @@ query_recommended_main:     &query_recommended_main
                         A.AuxVarchar03 = CGRC_PF.RV_Low_Value
             -------------- Language Code
             LEFT JOIN   CG_Ref_Codes CGRC_LC
-                ON      CGRC_LC.RV_Domain = 'CGRC_LC' AND
+                ON      CGRC_LC.RV_Domain = 'IDIOMA' AND
                         COALESCE(A.Idioma, 'ES') = CGRC_LC.RV_Low_Value
             -------------- Ranking
             LEFT JOIN   Mas_Vendidos_Seccion MVS
@@ -496,7 +496,7 @@ query_showcase_main:     &query_showcase_main
                                 A.AuxVarchar03 = CGRC_PF.RV_Low_Value
                     -------------- Language Code
                     LEFT JOIN   CG_Ref_Codes CGRC_LC
-                        ON      CGRC_LC.RV_Domain = 'CGRC_LC' AND
+                        ON      CGRC_LC.RV_Domain = 'IDIOMA' AND
                                 COALESCE(A.Idioma, 'ES') = CGRC_LC.RV_Low_Value
                     -------------- Editor
                     INNER JOIN  Editores E
